# galerio

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md
.github/workflows/: ci.yml
src/: main.rs
static/: simple-lightbox.min.js
templates/: index.html
