[package]
name = "gallerist"
description = "Generate static HTML galleries from a directory containing JPEGs."
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"

[dependencies]
anyhow = "1"
image = "0.23"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
tera = { version = "1.5", default-features = false }
