[package]
name = "galerio"
description = "Generate static HTML galleries from a directory containing JPEGs."
version = "1.0.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1"
chrono = "0.4"
image = "0.24"
kamadak-exif = "0.5"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
tera = { version = "1.5", default-features = false }
zip = "0.6"
